<resources>
    <string name="app_name">TaCu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Perfil</string>
    <string name="title_taquerias">Taquerias</string>
    <string name="title_preguntas">Preguntas</string>
    <string name="title_maps">Mapas</string>
    <string name="title_ranking">Ranking</string>
    <string name="welcome">Bienvenido de nuevo</string>
    <string name="sub_welcome">Inicia sesión para continuar</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="message_create">¿Aún no tienes cuenta?</string>
    <string name="loginText">Iniciar sesión</string>
    <string name="message_forgot_pass">¿Olvidaste tu contraseña?</string>
    <string name="message_create_account">Crea una</string>
    <string name="welcome_register">Registro</string>
    <string name="sub_welcome_register">Regístrate para continuar</string>
    <string name="message_account">¿Ya tienes una cuenta?</string>
    <string name="genre">Género:</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="phone">Número de teléfono (10 dígitos)</string>
    <string name="emailForm">Correo</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="other">Otro</string>
    <string name="confirm_pass">Confirmar contraseña</string>
    <string name="conditions">Acepto los términos y condiciones</string>
    <string name="registerText">Registrarme</string>
    <string name="home_welcome">¡Hola, Bienvenido!</string>
    <string name="home_sub_welcome">Usa tu ubicación actual para encontrar taquerías cerca de ti y empieza a evaluarlas.</string>
    <string name="homeText">Empezar a evaluar</string>
    <string name="recoverTitle">¿Olvidaste tu contraseña?</string>
    <string name="recoverMessage">Escribe tu correo y te enviaremos un mensaje con instrucciones para reestablecer tu contraseña y recuperar tu cuenta.
    Si aún no te has registrado te invitamos a unirte a nuestra comunidad.</string>
    <string name="recoverText">Enviar correo</string>
    <string name="titleProfile">Mi Perfil</string>
    <string name="profileOr">|</string>
    <string name="phoneNumber">Teléfono</string>
    <string name="profileLogOff">Cerrar sesión</string>
    <string name="FAQS">Preguntas Frecuentes</string>
    <string name="editAccount">Editar datos</string>
    <string name="deleteAccount">Borrar cuenta</string>
    <string name="titleRanking">Ranking</string>
    <string name="titleFAQS">Preguntas Frecuentes</string>
    <string name="titleListTaquerias">Taquerías Participantes</string>
    <string name="titleListTaqueriasBuscador">Buscar taquería…</string>
    <string name="titleMapa">Taquerías Cercanas</string>
    <string name="titleEvaluacion">Evaluación</string>
    <string name="categoria1">Sabor:</string>
    <string name="categoria2">Tamaño:</string>
    <string name="categoria3">Atención del personal:</string>
    <string name="categoria4">Salsas y acompañantes:</string>
    <string name="categoria5">Precio:</string>
    <string name="btnTextEvaluation">Evaluar Taquería</string>
    <string name="btnTextGoToEvaluation">Evaluar</string>
    <string name="btnTextGoToMap">Cómo llegar</string>
    <string name="titleLoading">Cargando...</string>
    <string name="titleWaiting">Por favor espere</string>
    <string name="titleTerms">Términos y condiciones de uso</string>
</resources>