<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    

    <item
        android:id="@+id/navigation_preguntas"
        android:icon="@drawable/help"
        android:title="@string/title_preguntas" />

    <item
        android:id="@+id/navigation_taquerias"
        android:icon="@drawable/list"
        android:title="@string/title_taquerias" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/map"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_ranking"
        android:icon="@drawable/trophy"
        android:title="@string/title_ranking" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/account"
        android:title="@string/title_profile" />


</menu>
