<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="mx.tec.tacu.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="mx.tec.tacu.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="mx.tec.tacu.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="mx.tec.tacu.ui.profile.PerfilFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
    android:id="@+id/navigation_taquerias"
    android:name="mx.tec.tacu.ui.taquerias.TaqueriasFragment"
    android:label="@string/title_taquerias"
    tools:layout="@layout/fragment_taquerias" />

    <fragment
        android:id="@+id/navigation_preguntas"
        android:name="mx.tec.tacu.ui.questions.PreguntasFragment"
        android:label="@string/title_preguntas"
        tools:layout="@layout/fragment_preguntas" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="mx.tec.tacu.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_ranking"
        android:name="mx.tec.tacu.ui.ranking.RankingFragment"
        android:label="@string/title_ranking"
        tools:layout="@layout/fragment_ranking" />

</navigation>