<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackground"
    >

    <ImageView
        android:id="@+id/loginLogo"
        android:layout_width="230dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        app:srcCompat="@drawable/logotacoblanco"
        />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="330dp"
            android:layout_gravity="center"
            android:elevation="3dp">

            <LinearLayout
                android:id="@+id/constraint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textViewTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/welcome"
                    android:textColor="@color/colorBlack"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewSubTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:gravity="center"
                    android:text="@string/sub_welcome" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginEmail"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/at"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/colorGrey"
                        android:ems="10"
                        android:hint="@string/email" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/loginPassword"
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableStart="@drawable/lock"
                        android:drawablePadding="5dp"
                        android:drawableTint="@color/colorGrey"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>


                <Button
                    android:id="@+id/btnForgetPassword"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="280dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-condensed-light"
                    android:gravity="end"
                    android:text="@string/message_forgot_pass"
                    android:textAllCaps="false"
                    android:textColor="@color/colorRed" />

                <Button
                    android:id="@+id/btnLogIn"
                    android:layout_width="280dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/background_button"
                    android:backgroundTint="@color/colorRed"
                    android:gravity="center"
                    android:text="@string/loginText"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/textViewQuestion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/message_create" />

                    <Button
                        android:id="@+id/btnCreateAccount"
                        style="?android:attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-condensed-light"
                        android:gravity="start"
                        android:text="@string/message_create_account"
                        android:textAllCaps="false"
                        android:textColor="@color/colorRed" />

                </LinearLayout>
            </LinearLayout>

            </ScrollView>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


</LinearLayout>